[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leaplive"
version = "2.0.0"
description = "Live Experiments for Active Pedagogy"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Sampad Mohanty"},
]
keywords = ["education", "pedagogy", "interactive", "experiments", "teaching", "CS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "sqlalchemy>=2.0",
    "duckdb-engine>=0.9.0",
    "typer>=0.9.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "itsdangerous>=2.0",
    "slowapi>=0.1.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[project.scripts]
leap = "leap.cli:main"
leaplive = "leap.cli:main"

[project.urls]
Homepage = "https://github.com/leaplive/LEAP2"
Repository = "https://github.com/leaplive/LEAP2"

[tool.setuptools.packages.find]
where = ["."]
include = ["leap*"]

[tool.setuptools.package-data]
"leap.ui" = ["**/*.js", "**/*.css", "**/*.html"]
